<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/createcontact_text"
       android:textSize="18dp"
       android:id="@+id/createcontact_id"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/editcontact_text"
        android:textSize="18dp"
        android:id="@+id/editcontact_id"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deletecontact_text"
        android:textSize="18dp"
        android:id="@+id/deleteconatact_id"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/displaycontact_text"
        android:textSize="18dp"
        android:id="@+id/displaycontact_id"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/finish_text"
        android:textSize="18dp"
        android:id="@+id/finish_id"
        android:onClick="doCancel"/>

</LinearLayout>
